--- a/index.html
+++ b/index.html
@@ -129,11 +129,14 @@ function setLoading(isLoading) {
   }
 }
 
-// **FUNÇÃO DE URL CORRIGIDA**
+// **FUNÇÃO DE URL CORRIGIDA E ROBUSTA**
 function getAbsoluteUrl(page) {
-    const path = window.location.pathname;
-    const basePath = path.substring(0, path.lastIndexOf('/') + 1);
-    return window.location.origin + basePath + page;
+    // Pega a URL atual, ex: https://user.github.io/repo/index.html
+    const currentUrl = window.location.href;
+    // Pega a parte da URL antes da última barra, ex: https://user.github.io/repo/
+    const baseUrl = currentUrl.substring(0, currentUrl.lastIndexOf('/') + 1);
+    // Retorna a URL completa e correta
+    return baseUrl + page;
 }
 
 async function apiPost(path, data) {
