--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       background:none; border:none; color:var(--primary-600); cursor:pointer;
       text-decoration:underline; padding:4px;
     }
-    .hint{margin-top:12px; font-size:12px; text-align:center; color:var(--muted);}
   </style>
 </head>
 <body>
@@ -56,24 +55,4 @@
 
       <div class="fld">
         <label for="user">Usuário</label>
-        <input id="user" placeholder="admin" autocomplete="username"/>
-      </div>
-      <div class="fld">
-        <label for="pass">Senha</label>
-        <input id="pass" type="password" placeholder="••••••" autocomplete="current-password"/>
-      </div>
-
-      <button id="btnLogin" class="btn">Entrar</button>
-      <div id="msg" class="muted"></div>
-      <div id="fallback" class="hint" style="display:none">
-        Se não redirecionar, <a id="goNow" href="#">clique aqui para abrir o painel</a>.
-      </div>
-    </div>
-    <div class="footer">
-      <span id="last-check"></span> <button id="btnReload">Atualizar</button>
-    </div>
-  </div>
-
-<script>
-/* ====== CONFIG ====== */
-const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5
+        <input id="user" placeholder="admin" autocomplete=
