--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Romaneio • Login</title>
+  <title>Romaneio • Painel</title>
   <style>
     :root{
       --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff;
@@ -16,43 +16,112 @@
       background:var(--bg); color:var(--text);
       display:flex; align-items:center; justify-content:center; padding:24px;
     }
-    .wrap{width:100%; max-width:400px}
+    .wrap{width:100%; max-width:720px}
     .card{
       background:var(--card); border:1px solid rgba(255,255,255,.06);
       border-radius:18px; padding:28px; box-shadow:var(--shadow);
     }
-    h1{margin:0 0 4px; font-size:28px; display:flex; gap:12px; align-items:center}
-    .conn-status{font-size:14px; min-height:21px;}
-    .ok{color:var(--success)} .err{color:var(--danger)}
-    .fld{display:flex; flex-direction:column; gap:8px; margin-top:16px}
-    .fld label{font-size:14px; color:var(--muted)}
-    .fld input{
-      background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08);
-      border-radius:12px; padding:12px 14px; font-size:16px; outline:none
-    }
-    .fld input:focus{border-color:var(--primary)}
+    h1{margin:0 0 12px; font-size:28px; display:flex; gap:12px; align-items:center}
+    .sub{color:var(--muted); margin-bottom:16px}
+    .row{display:flex; gap:12px; flex-wrap:wrap; margin-top:16px}
     .btn{
-      width:100%; appearance:none; border:0; border-radius:12px; padding:12px 14px;
+      appearance:none; border:0; border-radius:12px; padding:12px 14px;
       background:var(--primary); color:var(--text); cursor:pointer;
       display:inline-flex; align-items:center; justify-content:center; gap:8px; font-weight:600;
-      font-size:16px; margin-top:20px;
+      font-size:14px;
     }
-    .btn:hover{filter:brightness(1.1)}
-    .btn:disabled{background:var(--muted); color:var(--bg); cursor:not-allowed;}
-    #msg{min-height:22px; margin-top:14px; font-size:14px; text-align:center;}
-    .footer{margin-top:16px; text-align:center; font-size:12px; color:var(--muted);}
-    .footer button{
-      background:none; border:none; color:var(--primary-600); cursor:pointer;
-      text-decoration:underline; padding:4px;
+    .btn.sec{ background:#223255 }
+    .badge{padding:6px 10px; border-radius:999px; background:#0f1729; border:1px solid rgba(255,255,255,.08); font-size:12px}
+    pre{
+      background:#0f1729; border:1px solid rgba(255,255,255,.08);
+      padding:12px; border-radius:12px; overflow:auto; max-height:220px;
     }
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>🚚 Romaneio</h1>
-      <div id="conn" class="conn-status">Conectando...</div>
+      <h1>🚚 Romaneio • Painel</h1>
+      <div class="sub">Área autenticada</div>
 
-      <div class="fld">
-        <label for="user">Usuário</label>
-        <input id="user" placeholder="admin" autocomplete=
+      <div id="userInfo" class="badge">Validando sessão...</div>
+
+      <div class="row" style="margin-top:20px">
+        <button id="btnLogout" class="btn">Sair</button>
+        <button id="btnPing" class="btn sec">Ping API</button>
+      </div>
+
+      <h3 style="margin-top:24px">Sessão</h3>
+      <pre id="sessDump">sem dados</pre>
+    </div>
+  </div>
+
+<script>
+/* ====== CONFIG ====== */
+const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
+
+/* ====== HELPERS ====== */
+const $ = s => document.querySelector(s);
+function goToLogin(){
+  const base = location.pathname.replace(/[^/]+$/, '');
+  location.href = base + 'index.html';
+}
+async function post(path, data){
+  return new Promise((resolve, reject) => {
+    const xhr = new XMLHttpRequest();
+    xhr.open('POST', `${API_BASE}?path=${encodeURIComponent(path)}`, true);
+    xhr.setRequestHeader('Content-Type', 'text/plain;charset=utf-8');
+    xhr.onload = () => {
+      try { resolve(JSON.parse(xhr.responseText)); }
+      catch(e) { reject(new Error("Resposta inválida do servidor.")); }
+    };
+    xhr.onerror = () => reject(new Error("Erro de conexão."));
+    xhr.send(JSON.stringify(data || {}));
+  });
+}
+
+/* ====== STATE ====== */
+let session = null;
+
+/* ====== PAGE LOAD ====== */
+(async () => {
+  try {
+    const raw = localStorage.getItem("rom_session");
+    session = raw ? JSON.parse(raw) : null;
+    $('#sessDump').textContent = JSON.stringify(session, null, 2);
+
+    if (!session?.token) {
+      $('#userInfo').textContent = "Sessão inexistente. Redirecionando para login...";
+      return setTimeout(goToLogin, 800);
+    }
+
+    const me = await post("/me", { token: session.token });
+    if (me?.ok) {
+      $('#userInfo').textContent = `Logado como: ${me.me}`;
+    } else {
+      $('#userInfo').textContent = "Sessão inválida/expirada. Redirecionando...";
+      setTimeout(goToLogin, 800);
+    }
+  } catch (e) {
+    $('#userInfo').textContent = "Erro ao validar sessão. Redirecionando...";
+    setTimeout(goToLogin, 800);
+  }
+})();
+
+/* ====== AÇÕES ====== */
+$('#btnLogout').onclick = async () => {
+  try { await post("/logout", { token: session?.token }); } catch(e){}
+  localStorage.removeItem("rom_session");
+  goToLogin();
+};
+$('#btnPing').onclick = async () => {
+  try {
+    const r = await post("/ping");
+    alert(`Ping OK: ${r.ts}`);
+  } catch (e) {
+    alert('Falha no ping');
+  }
+};
+</script>
+</body>
+</html>
