--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       border-radius:18px; padding:28px; box-shadow:var(--shadow);
     }
     h1{margin:0 0 8px; font-size:28px; display:flex; gap:12px; align-items:center}
-    .conn-status{font-size:14px; min-height: 21px;}
+    .conn-status{font-size:14px; min-height:21px;}
     .ok{color:var(--success)} .err{color:var(--danger)} .muted{color:var(--muted)}
     .fld{display:flex; flex-direction:column; gap:8px; margin-top:16px}
     .fld label{font-size:14px; color:var(--muted)}
@@ -53,10 +53,9 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>🚚 Romaneio</h1>
+      <h1>🚚 Romaneio • Login</h1>
       <div id="conn" class="conn-status muted">Conectando…</div>
 
-      <!-- Campos SEMPRE renderizam -->
       <div class="fld">
         <label for="user">Usuário</label>
         <input id="user" placeholder="admin" autocomplete="username"/>
@@ -77,57 +76,41 @@
   </div>
 
 <script>
-/* ====== CONFIG ====== */
 const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
-
-/* ====== DOM ====== */
 const $ = s => document.querySelector(s);
 const connEl = $('#conn'), msgEl = $('#msg'), btnLogin = $('#btnLogin'), userEl = $('#user'), passEl = $('#pass'), netAlert = $('#netAlert');
 
-/* ====== HELPERS ====== */
 function setStatus(type, text){ connEl.className = `conn-status ${type}`; connEl.textContent = text; }
 function showMessage(type, text){ msgEl.className = type; msgEl.textContent = text; }
 function setLoading(x){ btnLogin.disabled = x; btnLogin.textContent = x ? 'Autenticando…' : 'Entrar'; }
-function goToApp(){
-  const base = location.pathname.replace(/[^/]+$/, ''); // mantém diretório /jr-app/
-  location.assign(base + 'app.html');
-}
+function goToApp(){ const base = location.pathname.replace(/[^/]+$/, ''); location.assign(base + 'app.html'); }
 function xhrPost(path, data, timeoutMs=8000){
   return new Promise((resolve, reject)=>{
     const xhr = new XMLHttpRequest();
     xhr.open('POST', `${API_BASE}?path=${encodeURIComponent(path)}`, true);
     xhr.setRequestHeader('Content-Type', 'text/plain;charset=utf-8');
     xhr.timeout = timeoutMs;
-    xhr.onload = () => {
-      try { resolve(JSON.parse(xhr.responseText)); }
-      catch(e){ reject(new Error('Resposta inválida do servidor.')); }
-    };
+    xhr.onload = ()=>{ try{ resolve(JSON.parse(xhr.responseText)); }catch(e){ reject(new Error('Resposta inválida do servidor.')); } };
     xhr.ontimeout = ()=> reject(new Error('Tempo de resposta excedido.'));
-    xhr.onerror = ()=> reject(new Error('Erro de conexão.'));
+    xhr.onerror   = ()=> reject(new Error('Erro de conexão.'));
     xhr.send(JSON.stringify(data || {}));
   });
 }
 
-/* ====== AÇÕES ====== */
-$('#btnReload').onclick = () => location.reload(true);
+$('#btnReload').onclick = ()=> location.reload(true);
 
 async function handleLogin(){
   const usuario = userEl.value.trim() || 'admin';
   const senha = passEl.value.trim();
   if(!senha){ showMessage('err','Por favor, informe a senha.'); return; }
   setLoading(true); showMessage('', '');
-
   try{
-    console.debug('[LOGIN] POST /login →', API_BASE);
     const r = await xhrPost('/login', {usuario, senha});
-    console.debug('[LOGIN] Resposta:', r);
     if(r.error) throw new Error(r.error);
-
     localStorage.setItem('rom_session', JSON.stringify(r.session));
     showMessage('ok','Login OK. Redirecionando…');
     goToApp();
   }catch(e){
-    console.error('[LOGIN] Falha:', e);
     setLoading(false);
     showMessage('err', e.message || 'Falha no login.');
   }
@@ -135,21 +118,15 @@ async function handleLogin(){
 btnLogin.onclick = handleLogin;
 passEl.addEventListener('keydown', e=>{ if(e.key==='Enter') handleLogin(); });
 
-/* ====== PING (não bloqueia UI) ====== */
 (async ()=>{
   try{
-    console.debug('[PING] →', API_BASE);
     const r = await xhrPost('/ping', {}, 5000);
-    setStatus('ok','Conectado • Online');
-    $('#last-check').textContent = `Verificado: ${new Date().toLocaleTimeString()}`;
+    setStatus('ok','Conectado • Online'); $('#last-check').textContent = `Verificado: ${new Date().toLocaleTimeString()}`;
     netAlert.style.display = 'none';
-    console.debug('[PING] OK:', r);
   }catch(e){
-    console.warn('[PING] Falha:', e);
     setStatus('err','Sem resposta da API');
-    netAlert.textContent = 'Não foi possível verificar a API agora. Você ainda pode tentar logar — se falhar, verifique conexão/CORS.';
-    netAlert.className = 'alert err';
-    netAlert.style.display = 'block';
+    netAlert.textContent = 'Não foi possível verificar a API agora. Você ainda pode tentar logar.';
+    netAlert.className = 'alert err'; netAlert.style.display = 'block';
   }
 })();
 </script>
