--- a/app.html
+++ b/app.html
@@ -57,35 +57,24 @@
   </div>
 
 <script>
-/* ====== CONFIG ====== */
 const API_BASE = "https://script.google.com/macros/s/AKfycbyrDoEP82oJDj2wTIX491414Qf5e-YaDZJHYMAgmWfiddVKCw7WP4oQwrVtEouYxL-NvQ/exec";
-
-/* ====== HELPERS ====== */
 const $ = s => document.querySelector(s);
-function goToLogin(){
-  const base = location.pathname.replace(/[^/]+$/, '');
-  location.assign(base + 'index.html');
-}
+function goToLogin(){ const base = location.pathname.replace(/[^/]+$/, ''); location.assign(base + 'index.html'); }
 function xhrPost(path, data, timeoutMs=8000){
   return new Promise((resolve, reject)=>{
     const xhr = new XMLHttpRequest();
     xhr.open('POST', `${API_BASE}?path=${encodeURIComponent(path)}`, true);
     xhr.setRequestHeader('Content-Type', 'text/plain;charset=utf-8');
     xhr.timeout = timeoutMs;
-    xhr.onload = () => {
-      try { resolve(JSON.parse(xhr.responseText)); }
-      catch(e){ reject(new Error('Resposta inválida do servidor.')); }
-    };
+    xhr.onload = ()=>{ try{ resolve(JSON.parse(xhr.responseText)); }catch(e){ reject(new Error('Resposta inválida do servidor.')); } };
     xhr.ontimeout = ()=> reject(new Error('Tempo de resposta excedido.'));
-    xhr.onerror = ()=> reject(new Error('Erro de conexão.'));
+    xhr.onerror   = ()=> reject(new Error('Erro de conexão.'));
     xhr.send(JSON.stringify(data || {}));
   });
 }
 
-/* ====== STATE ====== */
 let session = null;
 
-/* ====== PAGE LOAD ====== */
 (async ()=>{
   try{
     const raw = localStorage.getItem('rom_session');
@@ -97,24 +86,15 @@ let session = null;
       return setTimeout(goToLogin, 800);
     }
 
-    console.debug('[ME] Validando token…');
     const me = await xhrPost('/me', {token: session.token}, 8000);
-    console.debug('[ME] Resposta:', me);
-
-    if(me?.ok){
-      $('#userInfo').textContent = `Logado como: ${me.me}`;
-    }else{
-      $('#userInfo').textContent = 'Sessão inválida/expirada. Redirecionando…';
-      setTimeout(goToLogin, 800);
-    }
+    if(me?.ok){ $('#userInfo').textContent = `Logado como: ${me.me}`; }
+    else { $('#userInfo').textContent = 'Sessão inválida/expirada. Redirecionando…'; setTimeout(goToLogin, 800); }
   }catch(e){
-    console.error('[ME] Falha:', e);
     $('#userInfo').textContent = 'Erro ao validar sessão. Redirecionando…';
     setTimeout(goToLogin, 1000);
   }
 })();
 
-/* ====== AÇÕES ====== */
 $('#btnLogout').onclick = async ()=>{
   try{ await xhrPost('/logout', {token: session?.token}, 5000); }catch(e){}
   localStorage.removeItem('rom_session');
