--- a/index.html
+++ b/index.html
@@ -5,49 +5,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Romaneio • Login</title>
   <style>
-    :root{
-      --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff;
-      --primary:#4c8dff; --primary-600:#3a74d6; --success:#19c37d; --danger:#ff6b6b;
-      --shadow:0 18px 40px rgba(0,0,0,.35);
-    }
+    :root{ --bg:#0b1320; --card:#121b2e; --muted:#7b8aa1; --text:#eaf1ff; --primary:#4c8dff; --primary-600:#3a74d6; --success:#19c37d; --danger:#ff6b6b; --shadow:0 18px 40px rgba(0,0,0,.35); }
     html,body{height:100%}
-    body{
-      margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto;
-      background:var(--bg); color:var(--text);
-      display:flex; align-items:center; justify-content:center; padding:24px;
-    }
+    body{ margin:0; font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto; background:var(--bg); color:var(--text); display:flex; align-items:center; justify-content:center; padding:24px; }
     .wrap{width:100%; max-width:420px}
-    .card{
-      background:var(--card); border:1px solid rgba(255,255,255,.06);
-      border-radius:18px; padding:28px; box-shadow:var(--shadow);
-    }
+    .card{ background:var(--card); border:1px solid rgba(255,255,255,.06); border-radius:18px; padding:28px; box-shadow:var(--shadow); }
     h1{margin:0 0 8px; font-size:28px; display:flex; gap:12px; align-items:center}
-    .conn-status{font-size:14px; min-height:21px;}
-    .ok{color:var(--success)} .err{color:var(--danger)} .muted{color:var(--muted)}
+    .conn-status{font-size:14px; min-height:21px;} .ok{color:var(--success)} .err{color:var(--danger)} .muted{color:var(--muted)}
     .fld{display:flex; flex-direction:column; gap:8px; margin-top:16px}
     .fld label{font-size:14px; color:var(--muted)}
-    .fld input{
-      background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08);
-      border-radius:12px; padding:12px 14px; font-size:16px; outline:none
-    }
+    .fld input{ background:#0f1729; color:var(--text); border:1px solid rgba(255,255,255,.08); border-radius:12px; padding:12px 14px; font-size:16px; outline:none }
     .fld input:focus{border-color:var(--primary)}
-    .btn{
-      width:100%; appearance:none; border:0; border-radius:12px; padding:12px 14px;
-      background:var(--primary); color:var(--text); cursor:pointer;
-      display:inline-flex; align-items:center; justify-content:center; gap:8px; font-weight:600;
-      font-size:16px; margin-top:20px;
-    }
-    .btn:hover{filter:brightness(1.1)}
-    .btn:disabled{background:var(--muted); color:var(--bg); cursor:not-allowed;}
+    .btn{ width:100%; appearance:none; border:0; border-radius:12px; padding:12px 14px; background:var(--primary); color:var(--text); cursor:pointer; display:inline-flex; align-items:center; justify-content:center; gap:8px; font-weight:600; font-size:16px; margin-top:20px; }
+    .btn:hover{filter:brightness(1.1)} .btn:disabled{background:var(--muted); color:var(--bg); cursor:not-allowed;}
     #msg{min-height:22px; margin-top:14px; font-size:14px; text-align:center;}
-    .footer{margin-top:16px; text-align:center; font-size:12px; color:var(--muted);}
-    .footer button{
-      background:none; border:none; color:var(--primary-600); cursor:pointer;
-      text-decoration:underline; padding:4px;
-    }
-    .alert{border:1px solid rgba(255,255,255,.1); border-radius:10px; padding:10px; margin-top:12px}
-    .alert.err{border-color:#ff6b6b22; background:#ff6b6b11}
-    .alert.ok{border-color:#19c37d22; background:#19c37d11}
+    .footer{margin-top:16px; text-align:center; font-size:12px; color:var(--muted);} .footer button{ background:none; border:none; color:var(--primary-600); cursor:pointer; text-decoration:underline; padding:4px; }
+    .alert{border:1px solid rgba(255,255,255,.1); border-radius:10px; padding:10px; margin-top:12px} .alert.err{border-color:#ff6b6b22; background:#ff6b6b11}
   </style>
 </head>
 <body>
@@ -67,7 +40,6 @@
 
       <button id="btnLogin" class="btn">Entrar</button>
       <div id="msg" class="muted"></div>
-
       <div id="netAlert" class="alert" style="display:none"></div>
     </div>
     <div class="footer">
@@ -107,6 +79,8 @@ async function handleLogin(){
   try{
     const r = await xhrPost('/login', {usuario, senha});
     if(r.error) throw new Error(r.error);
+    // limpa qualquer sessão antiga e grava a nova
+    localStorage.removeItem('rom_session');
     localStorage.setItem('rom_session', JSON.stringify(r.session));
     showMessage('ok','Login OK. Redirecionando…');
     goToApp();
